Modified the clean_dataset and created doc2vec

--- a/data/ad_hominem/clean_dataset.ipynb
+++ b/data/ad_hominem/clean_dataset.ipynb
@@ -16,6 +16,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import re\n",
     "from cleanData import clean, removeWords"
    ]
   },
@@ -82,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cleaning the quotes, URLs, etc.\n",
+    "Cleaning the quotes, URLs, HTML tags, etc.\n",
     "See functions [clean()](cleanData.py) and [removeWords()](cleanData.py)"
    ]
   },
@@ -92,9 +93,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "for i in fallacies.index.values:\n",
+    "    fallacies.loc[i, \"reddit_ad_hominem.body\"] = re.sub('<.*?>|&quot;', '', fallacies.loc[i, \"reddit_ad_hominem.body\"]) # Remove HTML tags and quotes\n",
     "    fallacies.loc[i, \"reddit_ad_hominem.body\"] = clean(fallacies.loc[i, \"reddit_ad_hominem.body\"]);\n",
-    "    fallacies.loc[i, \"reddit_ad_hominem.body\"] =  removeWords(fallacies.loc[i, \"reddit_ad_hominem.body\"]);"
+    "    fallacies.loc[i, \"reddit_ad_hominem.body\"] =  removeWords(fallacies.loc[i, \"reddit_ad_hominem.body\"]);\n",
+    "fallacies = fallacies.reset_index(drop=True) # Reset indexes"
    ]
   },
   {
@@ -134,11 +138,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fallacies.to_csv(\"./ad_hominems_cleaned_Murilo.csv\", sep=',')"
+    "fallacies.to_csv(\"./ad_hominems_cleaned_Murilo.csv\", sep=',', index=False)"
    ]
   }
  ],
