--- a/models/02_tfidf/tfidf.ipynb
+++ b/models/02_tfidf/tfidf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,9 +18,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fallacies.df.Topic</th>\n",
+       "      <th>fallacies.df.Intended.Fallacy</th>\n",
+       "      <th>fallacies.df.Text</th>\n",
+       "      <th>Eric</th>\n",
+       "      <th>Pieter</th>\n",
+       "      <th>Murilo</th>\n",
+       "      <th>isAdHominem</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Are humans to blame for certain animal extinct...</td>\n",
+       "      <td>No Fallacy</td>\n",
+       "      <td>Yes, human beings have hunted and eaten animal...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Are humans to blame for certain animal extinct...</td>\n",
+       "      <td>No Fallacy</td>\n",
+       "      <td>Humans are not to be blamed for animal extinct...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Are humans to blame for certain animal extinct...</td>\n",
+       "      <td>No Fallacy</td>\n",
+       "      <td>Humans don't care enough for living beings.</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Are humans to blame for certain animal extinct...</td>\n",
+       "      <td>Ad Hominem</td>\n",
+       "      <td>Of course. You throw your garbage into the oce...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Are Quentin Tarantinos movies too violent?</td>\n",
+       "      <td>Ad Hominem</td>\n",
+       "      <td>Oh now, I'm not going to debate with you... Ha...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   fallacies.df.Topic  \\\n",
+       "0   Are humans to blame for certain animal extinct...   \n",
+       "1   Are humans to blame for certain animal extinct...   \n",
+       "7   Are humans to blame for certain animal extinct...   \n",
+       "9   Are humans to blame for certain animal extinct...   \n",
+       "11         Are Quentin Tarantinos movies too violent?   \n",
+       "\n",
+       "   fallacies.df.Intended.Fallacy  \\\n",
+       "0                     No Fallacy   \n",
+       "1                     No Fallacy   \n",
+       "7                     No Fallacy   \n",
+       "9                     Ad Hominem   \n",
+       "11                    Ad Hominem   \n",
+       "\n",
+       "                                    fallacies.df.Text  Eric  Pieter  Murilo  \\\n",
+       "0   Yes, human beings have hunted and eaten animal...   1.0       1       1   \n",
+       "1   Humans are not to be blamed for animal extinct...   0.0       1       1   \n",
+       "7         Humans don't care enough for living beings.   1.0       1       1   \n",
+       "9   Of course. You throw your garbage into the oce...   1.0       1       1   \n",
+       "11  Oh now, I'm not going to debate with you... Ha...   1.0       1       1   \n",
+       "\n",
+       "    isAdHominem  \n",
+       "0         False  \n",
+       "1         False  \n",
+       "7         False  \n",
+       "9          True  \n",
+       "11         True  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "adHominem.shape\n",
     "\n",
@@ -30,26 +150,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(382, 7)\n",
+      "(29281, 22)\n",
+      "(29663, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.concat([adHominem['body'], adHominem['ad_hominem']], axis=1, keys=['body', 'isAdHominem'])\n",
     "df = df.append(pd.concat([general['fallacies.df.Text'], general['isAdHominem']], axis=1, keys=['body', 'isAdHominem']))\n",
-    "print(general.shape)\n",
-    "print(adHominem.shape)\n",
-    "print(df.shape)\n",
     "\n",
     "df[\"body\"] = df[\"body\"].astype(str)\n",
     "df[\"isAdHominem\"] = df[\"isAdHominem\"].astype(bool)\n",
-    "df = df[~df.isin([np.nan, np.inf, -np.inf]).any(1)]"
+    "df = df[~df.isin([np.nan, np.inf, -np.inf]).any(1)]\n",
+    "print(general.shape)\n",
+    "print(adHominem.shape)\n",
+    "print(df.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In total, the train contains 2765 ad hominems\n",
+      "In total, the test contains 1228 ad hominems\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -61,16 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +209,26 @@
     "v.fit(train['body'].values.astype('U'))\n",
     "x_train = v.transform(train['body'].values.astype('U'))\n",
     "x_test = v.transform(test['body'].values.astype('U'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20764, 4323660)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train.shape #29663"
    ]
   },
   {
