removed stop words and tokenized bodies

--- a/data/ad_hominem/clean_dataset.ipynb
+++ b/data/ad_hominem/clean_dataset.ipynb
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fallacies.to_csv(\"./ad_hominems_cleaned_Murilo.csv\", sep=',', index=False)"
+    "fallacies.to_csv(\"./ad_hominems_cleaned.csv\", sep=',', index=False)"
    ]
   }
  ],
