added tokenizer (tokenize_df) and fixed the ad_hominems_cleaned dataset

--- a/data/ad_hominem/clean_dataset.ipynb
+++ b/data/ad_hominem/clean_dataset.ipynb
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "fallacies = pd.read_csv(\"./ad_hominems_cleaned.csv\", sep = \",\", header = 0)\n",
+    "fallacies = pd.read_csv(\"../general/general_dataset_cleaned.csv\", sep = \",\", header = 0)\n",
     "fallacies = fallacies[~fallacies.isin([np.nan, np.inf, -np.inf]).any(1)]\n",
     "\n",
     "print(fallacies.loc[1, \"reddit_ad_hominem.body\"] + \"\\n\\n\")\n",
@@ -91,7 +91,16 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 6min 15s, sys: 214 ms, total: 6min 15s\n",
+      "Wall time: 6min 16s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "for i in fallacies.index.values:\n",
@@ -138,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
