--- a/data/ad_hominem/clean_dataset.ipynb
+++ b/data/ad_hominem/clean_dataset.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cleaning Reddit Dataset\n",
+    "Remove quotes, endlines, etc."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,14 +16,22 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import re\n",
     "from cleanData import clean, removeWords"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import dataframe and take 2 entries to analyze"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -56,7 +72,7 @@
     }
    ],
    "source": [
-    "fallacies = pd.read_csv(\"./ad_hominems_cleaned.csv\", sep = \",\", header = 0)\n",
+    "fallacies = pd.read_csv(\"../general/general_dataset_cleaned.csv\", sep = \",\", header = 0)\n",
     "fallacies = fallacies[~fallacies.isin([np.nan, np.inf, -np.inf]).any(1)]\n",
     "\n",
     "print(fallacies.loc[1, \"reddit_ad_hominem.body\"] + \"\\n\\n\")\n",
@@ -64,14 +80,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cleaning the quotes, URLs, HTML tags, etc.\n",
+    "See functions [clean()](cleanData.py) and [removeWords()](cleanData.py)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 6min 15s, sys: 214 ms, total: 6min 15s\n",
+      "Wall time: 6min 16s\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "for i in fallacies.index.values:\n",
+    "    fallacies.loc[i, \"reddit_ad_hominem.body\"] = re.sub('<.*?>|&quot;', '', fallacies.loc[i, \"reddit_ad_hominem.body\"]) # Remove HTML tags and quotes\n",
     "    fallacies.loc[i, \"reddit_ad_hominem.body\"] = clean(fallacies.loc[i, \"reddit_ad_hominem.body\"]);\n",
-    "    fallacies.loc[i, \"reddit_ad_hominem.body\"] =  removeWords(fallacies.loc[i, \"reddit_ad_hominem.body\"]);"
+    "    fallacies.loc[i, \"reddit_ad_hominem.body\"] =  removeWords(fallacies.loc[i, \"reddit_ad_hominem.body\"]);\n",
+    "fallacies = fallacies.reset_index(drop=True) # Reset indexes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Look again at the cleaned data entries"
    ]
   },
   {
@@ -91,9 +134,15 @@
     }
    ],
    "source": [
-    "fallacies.head()\n",
     "print(fallacies.loc[1, \"reddit_ad_hominem.body\"] + \"\\n\\n\")\n",
     "print(fallacies.loc[21, \"reddit_ad_hominem.body\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Export the dataframe"
    ]
   },
   {
@@ -102,15 +151,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fallacies.to_csv(\"./ad_hominems_cleaned_Murilo.csv\", sep=',')"
+    "fallacies.to_csv(\"./ad_hominems_cleaned.csv\", sep=',', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
