developed the SVM samples and excluded the delete_memory from doc2vec.ipynb

--- a/models/04_doc2vec/doc2vec.ipynb
+++ b/models/04_doc2vec/doc2vec.ipynb
@@ -520,8 +520,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"reddit-doc2vec.model\")\n",
-    "model.delete_temporary_training_data(keep_doctags_vectors=True, keep_inference=True)"
+    "model.save(\"reddit-doc2vec.model\")"
    ]
   },
   {
