renamed file and laid out doc2vec gameplan

--- a/models/06_samples/ind_analysis.ipynb
+++ b/models/06_samples/ind_analysis.ipynb
@@ -25,55 +25,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Defining a function that will be used later..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_confusion_matrix(cm, classes,\n",
-    "                          normalize=False,\n",
-    "                          title='Confusion matrix',\n",
-    "                          cmap=plt.cm.Blues):\n",
-    "    \"\"\"\n",
-    "    This function prints and plots the confusion matrix.\n",
-    "    Normalization can be applied by setting `normalize=True`.\n",
-    "    \"\"\"\n",
-    "    if normalize:\n",
-    "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
-    "        print(\"Normalized confusion matrix\")\n",
-    "    else:\n",
-    "        print('Confusion matrix, without normalization')\n",
-    "\n",
-    "    print(cm)\n",
-    "\n",
-    "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
-    "    plt.title(title)\n",
-    "    plt.colorbar()\n",
-    "    tick_marks = np.arange(len(classes))\n",
-    "    plt.xticks(tick_marks, classes, rotation=45)\n",
-    "    plt.yticks(tick_marks, classes)\n",
-    "\n",
-    "    fmt = '.2f' if normalize else 'd'\n",
-    "    thresh = cm.max() / 2.\n",
-    "    \n",
-    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
-    "        plt.text(j, i, format(cm[i, j], fmt),\n",
-    "                 horizontalalignment=\"center\",\n",
-    "                 color=\"white\" if cm[i, j] > thresh else \"black\")\n",
-    "        \n",
-    "    plt.tight_layout()\n",
-    "    plt.ylabel('True label')\n",
-    "    plt.xlabel('Predicted label')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Importing data"
    ]
   },
@@ -1159,6 +1110,39 @@
    ],
    "source": [
     "x_train #doc2vec: vector_size=500"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using Doc2Vec..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.models.doc2vec import Doc2Vec\n",
+    "doc2vec_model = Doc2Vec.load(\"reddit-doc2vec.model\")"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# infer vectors (all of training bodies) -> df_inferred[\"body\"] = df_samples[\"body\"].apply(lambda x: \" \".join(simple_preprocess(str(x), deacc=True)))\n",
+    "# infer vectors (examples)\n",
+    "#train_data, test_data = train_test_split(df_notInSamples, test_size=0.3, random_state=3)\n",
+    "v.fit(train_data['body'].values.astype('U'))\n",
+    "\n",
+    "x_train = v.transform(train_data['body'].values.astype('U'))\n",
+    "y_train = list(train_data[\"isAdHominem\"])\n",
+    "\n",
+    "x_test = v.transform(df_samples['body'].values.astype('U'))\n",
+    "y_test = list(df_samples[\"isAdHominem\"])"
    ]
   }
  ],
