finished the samples analysis. worked on doc2vec+NN but didn't use it

--- a/models/06_samples/neural_network-doc2vec.ipynb
+++ b/models/06_samples/neural_network-doc2vec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -190,7 +190,7 @@
        "29286                             0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -251,10 +251,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 216,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from keras import utils\n",
     "from keras.preprocessing import text, sequence\n",
@@ -271,49 +269,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "body           object\n",
-       "isAdHominem      bool\n",
+       "reddit_ad_hominem.body          object\n",
+       "reddit_ad_hominem.ad_hominem     int64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.dtypes"
+    "fallacies.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(267, 100000)"
+       "(20463,)"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_train.shape"
+    "x_train = np.array(x_train)\n",
+    "y_train = np.array(y_train)\n",
+    "y_train.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
     "\n",
     "model = Sequential()\n",
     "\n",
-    "model.add(Dense(1024, input_shape=(vocab_size,)))\n",
+    "model.add(Dense(1024, input_shape=(500,))) # 500 is from the doc2vec model\n",
     "model.add(Activation('relu'))\n",
     "model.add(Dropout(0.5))\n",
     "model.add(Dense(256))\n",
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -365,24 +365,24 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_26 (Dense)             (None, 1024)              102401024 \n",
+      "dense_1 (Dense)              (None, 1024)              513024    \n",
       "_________________________________________________________________\n",
-      "activation_25 (Activation)   (None, 1024)              0         \n",
+      "activation_1 (Activation)    (None, 1024)              0         \n",
       "_________________________________________________________________\n",
-      "dropout_14 (Dropout)         (None, 1024)              0         \n",
+      "dropout_1 (Dropout)          (None, 1024)              0         \n",
       "_________________________________________________________________\n",
-      "dense_27 (Dense)             (None, 256)               262400    \n",
+      "dense_2 (Dense)              (None, 256)               262400    \n",
       "_________________________________________________________________\n",
-      "activation_26 (Activation)   (None, 256)               0         \n",
+      "activation_2 (Activation)    (None, 256)               0         \n",
       "_________________________________________________________________\n",
-      "dropout_15 (Dropout)         (None, 256)               0         \n",
+      "dropout_2 (Dropout)          (None, 256)               0         \n",
       "_________________________________________________________________\n",
-      "dense_28 (Dense)             (None, 1)                 257       \n",
+      "dense_3 (Dense)              (None, 1)                 257       \n",
       "_________________________________________________________________\n",
-      "activation_27 (Activation)   (None, 1)                 0         \n",
+      "activation_3 (Activation)    (None, 1)                 0         \n",
       "=================================================================\n",
-      "Total params: 102,663,681\n",
-      "Trainable params: 102,663,681\n",
+      "Total params: 775,681\n",
+      "Trainable params: 775,681\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -394,27 +394,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 240 samples, validate on 27 samples\n",
+      "Train on 18416 samples, validate on 2047 samples\n",
       "Epoch 1/4\n",
-      "240/240 [==============================] - 8s 35ms/step - loss: 10.4290 - acc: 0.3458 - val_loss: 11.2187 - val_acc: 0.2963\n",
+      "18416/18416 [==============================] - 4s 200us/step - loss: 14.5590 - acc: 0.0868 - val_loss: 14.3458 - val_acc: 0.1001\n",
       "Epoch 2/4\n",
-      "240/240 [==============================] - 3s 11ms/step - loss: 10.4290 - acc: 0.3458 - val_loss: 11.2187 - val_acc: 0.2963\n",
+      "18416/18416 [==============================] - 3s 138us/step - loss: 14.5590 - acc: 0.0868 - val_loss: 14.3458 - val_acc: 0.1001\n",
       "Epoch 3/4\n",
-      "240/240 [==============================] - 2s 9ms/step - loss: 10.4290 - acc: 0.3458 - val_loss: 11.2187 - val_acc: 0.2963\n",
+      "18416/18416 [==============================] - 2s 131us/step - loss: 14.5590 - acc: 0.0868 - val_loss: 14.3458 - val_acc: 0.1001\n",
       "Epoch 4/4\n",
-      "240/240 [==============================] - 2s 9ms/step - loss: 10.4290 - acc: 0.3458 - val_loss: 11.2187 - val_acc: 0.2963\n"
+      "18416/18416 [==============================] - 2s 130us/step - loss: 14.5590 - acc: 0.0868 - val_loss: 14.3458 - val_acc: 0.1001\n"
      ]
     }
    ],
    "source": [
-    "history = model.fit(x_train, train[\"isAdHominem\"],\n",
+    "history = model.fit(x_train, y_train,\n",
     "                    batch_size=batch_size,\n",
     "                    epochs=epochs,\n",
     "                    verbose=1,\n",
