Crazy mixed networks with limit N words

--- a/models/03_doc2vec/word2vec-doc2vec-POS-limit400words.ipynb
+++ b/models/03_doc2vec/word2vec-doc2vec-POS-limit400words.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(df[df[\"length\"] > 400].index, axis=0, inplace=True)"
+    "df.drop(df[df[\"length\"] > 200].index, axis=0, inplace=True)"
    ]
   },
   {
@@ -167,7 +167,7 @@
     {
      "data": {
       "text/plain": [
-       "(28435, 3)"
+       "(26724, 3)"
       ]
      },
      "execution_count": 9,
@@ -188,7 +188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Setting paragraph length at 400 words.\n"
+      "Setting paragraph length at 200 words.\n"
      ]
     }
    ],
@@ -205,8 +205,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In total, the train contains 1708 ad hominems\n",
-      "In total, the test contains 726 ad hominems\n"
+      "In total, the train contains 1586 ad hominems\n",
+      "In total, the test contains 693 ad hominems\n"
      ]
     }
    ],
@@ -334,8 +334,8 @@
      "output_type": "stream",
      "text": [
       "Start train data\n",
-      "0 of 19904 (0.0 %)\n",
-      "9952 of 19904 (50.0 %)\n"
+      "0 of 18706 (0.0 %)\n",
+      "9353 of 18706 (50.0 %)\n"
      ]
     }
    ],
@@ -354,7 +354,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 of 8531 (0.0 %)\r\n"
+      "0 of 8018 (0.0 %)\n",
+      "4009 of 8018 (50.0 %)\n"
      ]
     }
    ],
@@ -400,7 +401,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.54693339, 5.82669789])"
+       "array([0.54632009, 5.89722573])"
       ]
      },
      "execution_count": 20,
@@ -469,13 +470,13 @@
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "word2vec (InputLayer)           (None, 400, 300)     0                                            \n",
+      "word2vec (InputLayer)           (None, 200, 300)     0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "pos_tags (InputLayer)           (None, 400, 36)      0                                            \n",
+      "pos_tags (InputLayer)           (None, 200, 36)      0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "masking_1 (Masking)             (None, 400, 300)     0           word2vec[0][0]                   \n",
+      "masking_1 (Masking)             (None, 200, 300)     0           word2vec[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "masking_2 (Masking)             (None, 400, 36)      0           pos_tags[0][0]                   \n",
+      "masking_2 (Masking)             (None, 200, 36)      0           pos_tags[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
       "bidirectional_1 (Bidirectional) (None, 100)          240600      masking_1[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
@@ -517,19 +518,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 17913 samples, validate on 1991 samples\n",
+      "Train on 16835 samples, validate on 1871 samples\n",
       "Epoch 1/6\n",
-      "17913/17913 [==============================] - 484s 27ms/step - loss: 0.2641 - binary_accuracy: 0.9146 - val_loss: 0.2658 - val_binary_accuracy: 0.9081\n",
+      "16835/16835 [==============================] - 438s 26ms/step - loss: 0.2697 - binary_accuracy: 0.9135 - val_loss: 0.2248 - val_binary_accuracy: 0.9204\n",
       "Epoch 2/6\n",
-      "17913/17913 [==============================] - 481s 27ms/step - loss: 0.2145 - binary_accuracy: 0.9172 - val_loss: 0.2290 - val_binary_accuracy: 0.9151\n",
+      "16835/16835 [==============================] - 431s 26ms/step - loss: 0.2165 - binary_accuracy: 0.9196 - val_loss: 0.1902 - val_binary_accuracy: 0.9281\n",
       "Epoch 3/6\n",
-      "17913/17913 [==============================] - 484s 27ms/step - loss: 0.1968 - binary_accuracy: 0.9267 - val_loss: 0.2201 - val_binary_accuracy: 0.9111\n",
+      "16835/16835 [==============================] - 432s 26ms/step - loss: 0.1977 - binary_accuracy: 0.9243 - val_loss: 0.2040 - val_binary_accuracy: 0.9273\n",
       "Epoch 4/6\n",
-      "17913/17913 [==============================] - 480s 27ms/step - loss: 0.1863 - binary_accuracy: 0.9289 - val_loss: 0.2260 - val_binary_accuracy: 0.9146\n",
+      "16835/16835 [==============================] - 427s 25ms/step - loss: 0.1849 - binary_accuracy: 0.9282 - val_loss: 0.1914 - val_binary_accuracy: 0.9254\n",
       "Epoch 5/6\n",
-      "17913/17913 [==============================] - 483s 27ms/step - loss: 0.1724 - binary_accuracy: 0.9333 - val_loss: 0.2202 - val_binary_accuracy: 0.9126\n",
+      "16835/16835 [==============================] - 427s 25ms/step - loss: 0.1728 - binary_accuracy: 0.9310 - val_loss: 0.1907 - val_binary_accuracy: 0.9233\n",
       "Epoch 6/6\n",
-      "17913/17913 [==============================] - 484s 27ms/step - loss: 0.1600 - binary_accuracy: 0.9363 - val_loss: 0.2355 - val_binary_accuracy: 0.9151\n"
+      "16835/16835 [==============================] - 432s 26ms/step - loss: 0.1613 - binary_accuracy: 0.9350 - val_loss: 0.1808 - val_binary_accuracy: 0.9278\n"
      ]
     }
    ],
@@ -556,7 +557,24 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-f95d38617a98>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_predicted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'word2vec'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtrain_vectors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'doc2vec'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtrain_doc_vectors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'pos_tags'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtrain_tags\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, x, batch_size, verbose, steps)\u001b[0m\n\u001b[1;32m   1167\u001b[0m                                             \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1168\u001b[0m                                             \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1169\u001b[0;31m                                             steps=steps)\n\u001b[0m\u001b[1;32m   1170\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1171\u001b[0m     def train_on_batch(self, x, y,\n",
+      "\u001b[0;32m~/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/keras/engine/training_arrays.py\u001b[0m in \u001b[0;36mpredict_loop\u001b[0;34m(model, f, ins, batch_size, verbose, steps)\u001b[0m\n\u001b[1;32m    292\u001b[0m                 \u001b[0mins_batch\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mins_batch\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    293\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 294\u001b[0;31m             \u001b[0mbatch_outs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mins_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    295\u001b[0m             \u001b[0mbatch_outs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mto_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_outs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    296\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mbatch_index\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m   2713\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_legacy_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2714\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2715\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2716\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2717\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mpy_any\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mis_tensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py\u001b[0m in \u001b[0;36m_call\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m   2673\u001b[0m             \u001b[0mfetched\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_callable_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0marray_vals\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_metadata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2674\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2675\u001b[0;31m             \u001b[0mfetched\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_callable_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0marray_vals\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2676\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mfetched\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2677\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1437\u001b[0m           ret = tf_session.TF_SessionRunCallable(\n\u001b[1;32m   1438\u001b[0m               \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_session\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_handle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstatus\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1439\u001b[0;31m               run_metadata_ptr)\n\u001b[0m\u001b[1;32m   1440\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1441\u001b[0m           \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "train_predicted = model.predict({'word2vec': train_vectors, 'doc2vec': train_doc_vectors, 'pos_tags': train_tags})"
    ]
